Updates for chapter 9

--- a/Winter-2019-Errata.Rmd
+++ b/Winter-2019-Errata.Rmd
@@ -119,9 +119,11 @@ theme_minimal()
 
 |    Page    |    Text                                                                                                                                                      |    Comment                                                                                                                                                                                                                                                                       |
 |---------------:|------------------------------------------------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-|    161     |    (Figure 9.2)                                                                                                                                   |    According to the equation for Cohen's _d_ (E9.1), the _d_ values in this figure should be 1, 2, and 6                                                                                                                                                                          |
+|    161     |    (Figure 9.2)                                                                                                                                   |    According to the equation for Cohen's _d_ (E9.1), the _d_ values in this figure should be 1, 2, and 6 (there's probably some rounding in the _M_ values that we're not shown)       |
 |    162     |    `Cohen's d`<br>`d estimate: 1.037202 (large)`<br>`95 percent confidence interval:`<br>`      inf       sup`<br>`0.5142663 1.5601377`    |    Using the latest version of the `effsize` package (0.8.1), I get the following instead:<br> `Cohen's d`<br>`d estimate: -1.070784 (large)`<br>`95 percent confidence interval:`<br>`     lower      upper `<br>`-1.5955866 -0.5459824`    |
-
+|    163     |    (Equation E9.4)                               |   Clarification: this is the **95%** confidence interval; the coefficient 1.96 is greater for higher confidence levels and lesser for lower confidence levels. |
+|    167     |   For _t_ = 1.5, the _p_-value is _p_ = 0.14      |  This is true with a sample size of 100. The _t_-distribution changes shape with different sample sizes (technically, with different "degrees of freedom", which are closely related to sample size). Smaller samples mean the _t_-distribution has 'heavier tails', which translates to greater _p_-values for smaller sample sizes (holding _t_ constant). As sample sizes approach infinity, the _t_-distribution approaches the shape of the normal distribution.  |
+|    168     |   The critical value turns out to be _t_ = 1.98 in this case.    |    Again, "this case" refers to a sample size of 100 (see above comment). For sample sizes of 10, 30, 100, 300, and 1000, the critical values for an $\alpha$ level of 0.05 are roughly 2.26, 2.05, 1.98, 1.97, and 1.96 (respectively). Note that the corresponding $\alpha$ critical value for a normal distribution is 1.96, underscoring the point that larger sample sizes make the _t_-distribution more like the normal distribution. |
 
 # Chapter 10: Inferential statistics 2
 
