--- a/Winter-2019-Errata.Rmd
+++ b/Winter-2019-Errata.Rmd
@@ -116,14 +116,26 @@ theme_minimal()
 
 # Chapter 9: Inferential statistics 1
 
+<!-- This is a grid table r/t the usual pipe table, since the former supports arbitrary block elements (in this case, a bulleted list): https://pandoc.org/MANUAL.html#extension-grid_tables -->
 
-|    Page    |    Text                                                                                                                                                      |    Comment                                                                                                                                                                                                                                                                       |
-|---------------:|------------------------------------------------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-|    161     |    (Figure 9.2)                                                                                                                                   |    According to the equation for Cohen's _d_ (E9.1), the _d_ values in this figure should be 1, 2, and 6 (there's probably some rounding in the _M_ values that we're not shown)       |
-|    162     |    `Cohen's d`<br>`d estimate: 1.037202 (large)`<br>`95 percent confidence interval:`<br>`      inf       sup`<br>`0.5142663 1.5601377`    |    Using the latest version of the `effsize` package (0.8.1), I get the following instead:<br> `Cohen's d`<br>`d estimate: -1.070784 (large)`<br>`95 percent confidence interval:`<br>`     lower      upper `<br>`-1.5955866 -0.5459824`    |
-|    163     |    (Equation E9.4)                               |   Clarification: this is the **95%** confidence interval; the coefficient 1.96 is greater for higher confidence levels and lesser for lower confidence levels. |
-|    167     |   For _t_ = 1.5, the _p_-value is _p_ = 0.14      |  This is true with a sample size of 100. The _t_-distribution changes shape with different sample sizes (technically, with different "degrees of freedom", which are closely related to sample size). Smaller samples mean the _t_-distribution has 'heavier tails', which translates to greater _p_-values for smaller sample sizes (holding _t_ constant). As sample sizes approach infinity, the _t_-distribution approaches the shape of the normal distribution.  |
-|    168     |   The critical value turns out to be _t_ = 1.98 in this case.    |    Again, "this case" refers to a sample size of 100 (see above comment). For sample sizes of 10, 30, 100, 300, and 1000, the critical values for an $\alpha$ level of 0.05 are roughly 2.26, 2.05, 1.98, 1.97, and 1.96 (respectively). Note that the corresponding $\alpha$ critical value for a normal distribution is 1.96, underscoring the point that larger sample sizes make the _t_-distribution more like the normal distribution. |
+
++----------------+------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+|    Page        |    Text                                                                                                                                  |    Comment                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
++===============:+==========================================================================================================================================+=============================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================+
+|    161         |    (Figure 9.2)                                                                                                                          |    According to the equation for Cohen's _d_ (E9.1), the _d_ values in this figure should be 1, 2, and 6 (there's probably some rounding in the _M_ values that we're not shown)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
++----------------+------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+|    162         |    `Cohen's d`<br>`d estimate: 1.037202 (large)`<br>`95 percent confidence interval:`<br>`      inf       sup`<br>`0.5142663 1.5601377`  |    Using the latest version of the `effsize` package (0.8.1), I get the following instead:<br> `Cohen's d`<br>`d estimate: -1.070784 (large)`<br>`95 percent confidence interval:`<br>`     lower      upper `<br>`-1.5955866 -0.5459824`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
++----------------+------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+|    163         |    (Equation E9.4)                                                                                                                       |    This equation oversimplifies things a little too much. A more general form would be the following: <br> $CI = [estimate-CV*SE, estimate+CV*SE]$<ul><li>$estimate$ is some sample estimate---which could be a mean ($\bar{x}$), a regression coefficient ($b$), or some other estimate of a population parameter.</li><ul><li>Equation E9.4 uses the sample mean ($\bar{x}$) here, but you can use CIs to estimate population parameters other than the population mean.</li></ul><li>$CV$ is the _critical value_: the value of the sampling distribution corresponding to the confidence level you specify.</li><ul><li>Equation E9.4 uses 1.96 here, but this is the critical value _specifically_ for a normally-distributed sampling distribution _and_ a 95% confidence level (because 95% of _z_-scores fall within 1.96 SDs of the mean)</li></ul><li>$SE$ is the standard error, or $\frac{sd}{\sqrt{n}}$ ($sd$ being the _sample_ standard deviation)</li></ul> |
++----------------+------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+|    167         |   For _t_ = 1.5, the _p_-value is _p_ = 0.14                                                                                             |    This is true with a sample size of 100. The _t_-distribution changes shape with different sample sizes (technically, with different "degrees of freedom", which are closely related to sample size). Smaller samples mean the _t_-distribution has 'heavier tails', which translates to greater _p_-values for smaller sample sizes (holding _t_ constant). As sample sizes approach infinity, the _t_-distribution approaches the shape of the normal distribution.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
++----------------+------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+|    168         |   The critical value turns out to be _t_ = 1.98 in this case.                                                                            |    Again, "this case" refers to a sample size of 100 (see above comment). For sample sizes of 10, 30, 100, 300, and 1000, the critical values for an $\alpha$ level of 0.05 are roughly 2.26, 2.05, 1.98, 1.97, and 1.96 (respectively). Note that the corresponding $\alpha$ critical value for a normal distribution is 1.96, underscoring the point that larger sample sizes make the _t_-distribution more like the normal distribution.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
++----------------+------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+
+
+
+
 
 # Chapter 10: Inferential statistics 2
 
