Add more notes on chapter 12

--- a/Winter-2019-Errata.Rmd
+++ b/Winter-2019-Errata.Rmd
@@ -162,6 +162,10 @@ No errata found.
 
 # Chapter 12: Generalized linear models 1
 
-|    Page    |    Text                                                                                                                               |    Comment                                                                                                                                                             |
-|---------------:|-------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-|    202     |    Even if you supply very extreme values such as 10,000 or –10,000 to `plogis()`, it will always return a number between 0 and 1.    |    In the current version of R (4.0.3), `plogis(17)` returns `1`. While `1 - plogis(17)` is nonzero, `1 - plogis(37)` returns `0`, and `qlogis(1 - plogis(37))` returns `-Inf`.    |
+|    Page    |    Text                                                                                                                               |    Comment                                                                                                                                                                         |
+|-----------:|---------------------------------------------------------------------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+|    202     |    Even if you supply very extreme values such as 10,000 or –10,000 to `plogis()`, it will always return a number between 0 and 1.    |    `plogis()` **doesn't** always return a number between 0 and 1 in the version of R we're using (4.0.3). `plogis(17)` returns `1`, and while `1 - plogis(17)` is nonzero, `1 - plogis(37)` returns `0`, and `qlogis(1 - plogis(37))` returns `-Inf`.    |
+|    203     |    The whole point of talking about log odds is that this puts probabilities onto a continuous scale.                                 |    This is confusing because probabilities are also continuous. Better stated: Log-odds put probabilities onto an **unbounded** scale, which is more amenable to regression.       |
+|    203     |    The logistic function is the _inverse_ of the log odd function.									                                 |    FYI, in R, the logistic function is `plogis()`; its inverse, the logit or log-odds function, is `qlogis()`. So for example, `plogis(0)` is 0.5, and `qlogis(0.5)` is 0.      |
+|    209     |    `levels(dative$RealizationOfRecipient)`									                                					 	 |    `levels(df$myCol)` will throw an error if `myCol` is a character vector, which you can resolve by first converting to a factor: `levels(factor(df$myCol))`. There's no error with the `dative` dataframe because it's stored in the `languageR` package with factor columns.      |
+|    214     |    (Footnote 4)									                                					 	 							 |    This footnote alludes to the distinction between different [levels of measurement](https://en.wikipedia.org/wiki/Level_of_measurement), in particular the difference between _ordinal scales_ and _interval/ratio scales_.  |
