--- a/Winter-2019-Errata.Rmd
+++ b/Winter-2019-Errata.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Errata for _Statistics for Linguists: An Introduction Using R_, Bodo Winter, 2019, Routledge"
 author: "| Dan Villarreal \n| University of Pittsburgh\n"
-date: "Updated 8 September 2022"
+date: "Updated 7 October 2022"
 output: 
   # github_document:
   #   toc: yes
@@ -135,6 +135,7 @@ theme_minimal()
 |    Page    |    Text                                         |    Comment                                                                                                                                            |
 |---------------:|-----------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------|
 |    120     |    (Code output at the bottom of the page)    |    In more recent `dplyr` versions, we also get a warning message: <br>```summarise()` ungrouping output (override with `.groups` argument)``    |
+|    127     |    (Equation E7.3)    |    *taste valence* should be *smell valence*, and *smell valence* should be *taste valence*. That is, *smell valence*, as the first ordered factor level, should correspond to +1 in the model coefficients, and *smell valence* should correspond to -1.   |
 
 
 
