--- a/Winter-2019-Errata.Rmd
+++ b/Winter-2019-Errata.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Errata for _Statistics for Linguists: An Introduction Using R_, Bodo Winter, 2019, Routledge"
-author: "| Dan Villarreal \n| University of Pittsburgh\n"
+author: "Dan Villarreal (University of Pittsburgh), with contributions from Laurel MacKenzie (New York University)"
 date: "Updated 7 October 2022"
 output: 
   # github_document:
@@ -120,7 +120,7 @@ theme_minimal()
 |    Page    |    Text                                                                                         |    Comment                                                                                                                  |
 |---------------:|-----------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------|
 |    103     |    E6.1: $y = b_{0} + b_{1} * x + b_{2} * x + e$                                                           |    This equation suggests that $b_{1}$ and $b_{2}$ are multiplied by the same predictor $x$. In the case of multiple regression, each predictor has its own coefficient (as in E6.3, bottom of page), so a more accurate form would be $y = b_{0} + b_{1} * x_{1} + b_{2} * x_{2} + e$   |
-|    104     |    In this model, 900ms is the prediction for a word with 0 log frequency and 0 word length.                                                           |    The prediction should be 750ms, not 900ms. (900ms was the prediction for the model excluding the word length coefficient.)                  
+|    104     |    In this model, 900ms is the prediction for a word with 0 log frequency and 0 word length.                                                           |    The prediction should be 750ms, not 900ms. (900ms was the prediction for the model excluding the word length coefficient.)             |     
 |    106     |    (Code output for `tidy(icon_mdl)`)                                                           |    Your output will probably have a lot fewer decimal places.                                                               |
 |    106--7  |    Footnote 2 discussion of rounding                                                                                 |    Two points of clarification about rounding: (1) Rounding should only be done at the _end_ of an analysis; any earlier, and you're losing precision in your calculations, running the risk of a rounding error compounding over the course of many calculations. (2) Rounding should only be done when you want to display numbers as numbers, not when feeding numbers into a plot.                                                               |
 |    107     |    (Footnote 3) A log frequency of 0 corresponds to a raw word frequency of 1, since 100=1    |    Missing superscript. Should be<br>A log frequency of 0 corresponds to a raw word frequency of 1, since 10^0^=1    |
